--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Noto+Sans+SC&family=Raleway&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://img.icons8.com/material-outlined/24/000000/pixel-cat.png"/>
+    <link rel="html" href="contact.html">
+    <link rel="html" href="portfolio.html">
     <link rel="stylesheet" href="styles.css">
     
 </head>
@@ -27,8 +29,8 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="https://strawberryboar.github.io/Homework2/">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="portfolio.html">Portfolio</a>
