--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Noto+Sans+SC&family=Raleway&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="https://img.icons8.com/material-outlined/24/000000/pixel-cat.png"/>
     <link rel="html" href="contact.html">
     <link rel="html" href="portfolio.html">
     <link rel="stylesheet" href="styles.css">
@@ -38,6 +37,7 @@
         <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
         </li>
+      </ul>
     </div>
   </nav>
 
@@ -50,10 +50,10 @@
 
     <div class="row">
       <div class="col-md-6">
-        <a href="https://strawberryboar.github.io/" target="_blank"><img class="img1" src="https://i.imgur.com/WJfCDsQ.png" alt="Athena"></a>
+        <a href="https://strawberryboar.github.io/" target="_blank"><img class="img1 img-fluid" src="https://i.imgur.com/WJfCDsQ.png" alt="Athena"></a>
       </div>
       <div class="col-md-6">
-        <a href="https://strawberryboar.github.io/animal/" target="_blank"><img class="img2" src="https://i.imgur.com/zINQ2ZM.png" alt="Athena"></a>
+        <a href="https://strawberryboar.github.io/animal/" target="_blank"><img class="img2 img-fluid" src="https://i.imgur.com/zINQ2ZM.png" alt="Athena"></a>
       </div>
     </div>
 
