--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
  <!--Navbar Start-->
 
  <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #D57E94;">
-  <a class="navbar-brand" href="https://strawberryboar.github.io/Homework2/">Athena Petrovich</a>
+  <a class="navbar-brand" href="https://strawberryboar.github.io/Athenas-Bio/">Athena Petrovich</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
